# binaryen-fork

./: .gitignore  AGENTS.md  ARENA_IMPLEMENTATION_PLAN.md  ARENA_STATUS.md  CMakeLists.txt  Contributing.md  PHASE2_SUMMARY.md  PHASE6_STATUS.md  PHASE7_PLAN.md  PHASE8_SUMMARY.md  README.md  RUST_CONVERSION_SUMMARY.md  SESSION_SUMMARY.md  TIER2_COMPLETE.md  TIER2_IMPLEMENTATION_PLAN.md  TIER2_SESSION1_SUMMARY.md  balance.py  fix_allocs_final.py  fix_tests.py  fix_tests_v2.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust-abi-check.yml  rust-bench-nightly.yml  rust-ci.yml  rust-fuzz-nightly.yml  rust-fuzz-scheduled.yml  rust-fuzz.yml  rust-miri.yml
docs/: 0-vision.md  rust-conversion-getting-started.md
docs/rust/progress/: 1-tasks.md  1.1-infra.md  1.2-libs.md  1.3-ir.md  1.3.1-opcode-debt.md  2-gap-analysis.md  2.1-tier1-foundational.md  2.2-tier2-local-block.md  2.3-tier3-expression.md  2.4-tier4-advanced.md  2.5-tier5-specialized.md  2.6-remaining-niche.md  3-decompiler.md  3.1-name-inference.md  3.2-triad-test.md  4-clis.md
docs/rust/vision/: -build.md  README.md  RUST_CONVERSION_PLAN.md  abi-gating.md  arena-handle-design.md  arena-handle-migration.md  arena-ownership.md  asan-guide.md  ffi-reference.md  rust-conversion-checklists.md  rust-conversion-technical-specs.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz/: Cargo.toml
fuzz/fuzz/fuzz_targets/: ahash.rs  arena.rs  fastmap.rs  interner.rs
fuzz/fuzz/src/: lib.rs
fuzz/fuzz_targets/: arena.rs  fastmap.rs  interner.rs
fuzz/src/: lib.rs
include/: binaryen_ffi.h
rust/: Cargo.toml  PHASE2_IMPL.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PR_CHECKLIST.md  test.wasm  test.wat  test_final.wat
rust/bench/: README.md
rust/binaryen-core/: Cargo.toml
rust/binaryen-core/src/: lib.rs  literal.rs  type.rs  type_store.rs
rust/binaryen-decompile/: Cargo.toml
rust/binaryen-decompile/src/: c_printer.rs  lib.rs  lifter.rs  printer.rs  rust_printer.rs
rust/binaryen-decompile/src/passes/: identify_booleans.rs  identify_if_else.rs  identify_loops.rs  identify_pointers.rs  mod.rs  name_inference.rs  recombine_expressions.rs
rust/binaryen-decompile/tests/: _add.roundtrip.cpp  _add.roundtrip.rs  _fact.roundtrip.cpp  _fact.roundtrip.rs  _fact.rs  _fib.roundtrip.cpp  _fib.roundtrip.rs  _fib.rs  _loop_sum.roundtrip.cpp  _loop_sum.roundtrip.rs  _loop_sum.rs  _max.roundtrip.cpp  _max.roundtrip.rs  _max.rs  decompile_tests.rs  triad_tests.rs
rust/binaryen-decompile/tests/common/: mod.rs
rust/binaryen-ffi/: Cargo.toml  README.md  cbindgen.toml
rust/binaryen-ffi/src/: ir_ffi.rs  lib.rs  type_ffi.rs
rust/binaryen-ir/: Cargo.toml
rust/binaryen-ir/src/: allocator_stress_test.rs  annotation.rs  binary_reader.rs  binary_writer.rs  effects.rs  expression.rs  lib.rs  module.rs  ops.rs  pass.rs  validation.rs  visitor.rs  wasm_features.rs
rust/binaryen-ir/src/analysis/: call_graph.rs  cfg.rs  cost.rs  dominators.rs  evaluator.rs  global_analysis.rs  hasher.rs  mod.rs  patterns.rs  ssa.rs  stats.rs  usage.rs
rust/binaryen-ir/src/dataflow/: cfg.rs  dominance.rs  liveness.rs  local_graph.rs  mod.rs
rust/binaryen-ir/src/passes/: README.md  asyncify.rs  avoid_reinterprets.rs  coalesce_locals.rs  code_pushing.rs  const_hoisting.rs  dae.rs  dae_optimizing.rs  dce.rs  dfo.rs  duplicate_function_elimination.rs  flatten.rs  generate_dyncalls.rs  global_refining.rs  gufa.rs  i64_to_i32_lowering.rs  inlining.rs  instrument_locals.rs  legalize_js_interface.rs  licm.rs  local_cse.rs  local_subtyping.rs  memory64_lowering.rs  memory_optimization.rs  merge_blocks.rs  merge_locals.rs  metadata.rs  mod.rs  names.rs  optimize_added_constants.rs  optimize_added_constants_propagate.rs  optimize_casts.rs  optimize_for_js.rs  optimize_instructions.rs  pick_load_signs.rs  poppify.rs  post_emscripten.rs  precompute.rs  precompute_propagate.rs  print.rs  (+29 more)
rust/binaryen-ir/tests/: annotation_tests.rs  pass_pipeline.rs
rust/binaryen-macros/: Cargo.toml
rust/binaryen-macros/src/: lib.rs
rust/binaryen-support/: Cargo.toml  README.md
rust/binaryen-support/benches/: bench_support.rs
rust/binaryen-support/src/: arena.rs  hash.rs  lib.rs  strings.rs
rust/binaryen-tools/: Cargo.toml
rust/binaryen-tools/src/: lib.rs
rust/scripts/: check_abi_changes.sh  check_bench_comparator.sh  check_cbindgen.sh  check_internal_cheader.sh  internal_header_notice.txt  run_bench.sh  run_cargo_fuzz.sh  update_cbindgen.sh
scripts/: check_abi_changes.sh  check_cbindgen.sh  run_cargo_fuzz.sh  update_cbindgen.sh
src/support/: CMakeLists.txt  rust_shim_template.h  strings_rust.cpp  strings_rust.h
test/: atomic.wast  bulk.wast  signext.wast
test/rust_consumer/: .gitignore  CMakeLists.txt  build_and_run.sh  example.c  example.wat  minimal_identity.wat  pipeline_demo.cpp  simple_example.wat  test_ffi.c  test_ffi_arena_deref_after_dispose  test_ffi_arena_deref_after_dispose.cpp  test_ffi_arena_handle  test_ffi_arena_handle.cpp  test_ffi_arena_many_threads  test_ffi_arena_many_threads.cpp  test_ffi_arena_misuse  test_ffi_arena_misuse.cpp  test_ffi_arena_race_dispose  test_ffi_arena_race_dispose.cpp  test_ffi_arena_threads  test_ffi_arena_threads.cpp  test_ffi_arena_use_after_dispose  test_ffi_arena_use_after_dispose.cpp  test_ffi_extra.c  test_ffi_ir.cpp  test_ffi_threaded  test_ffi_threaded.cpp  test_ffi_type_roundtrip  test_ffi_type_roundtrip.c  test_ffi_type_roundtrip.cpp  test_rust_binary_io.cpp  test_rust_wat_io.cpp
