[package]
name = "binaryen-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
binaryen-support = { path = "../binaryen-support" }
binaryen-core = { path = "../binaryen-core" }
libc = "0.2"
once_cell = "1.20"
binaryen-ir = { version = "0.1.0", path = "../binaryen-ir" }
bumpalo = "3.19.1"
