[package]
name = "binaryen-tools"
version = "0.1.0"
edition = "2021"
authors = ["Binaryen Maintainers"]
description = "CLI tools for Binaryen"

[lib]
path = "src/lib.rs"

[dependencies]
binaryen-ir = { path = "../binaryen-ir" }
binaryen-core = { path = "../binaryen-core" }
binaryen-decompile = { path = "../binaryen-decompile" }
bumpalo = "3.16.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
wast = "220.0.0"
wasmprinter = "0.2"

[[bin]]
name = "wasm-opt"
path = "src/bin/wasm_opt.rs"

[[bin]]
name = "wasm-as"
path = "src/bin/wasm_as.rs"

[[bin]]
name = "wasm-dis"
path = "src/bin/wasm_dis.rs"

[[bin]]
name = "wasm-decompile"
path = "src/bin/wasm_decompile.rs"

[[bin]]
name = "rust-lit-adapter"
path = "src/bin/lit_adapter.rs"
